--- a/src/pages/auth/Auth.css
+++ b/src/pages/auth/Auth.css
@@ -1,6 +1,15 @@
 .auth-body {
-    background-color:#626567;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+              url('../../Images/vasaivirarmahangarpalika.jpg');
+  background-size: cover;
+  
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 1; 
   }
+  
 .Auth-Container {
     height: 85vh;
     display: flex !important;
@@ -13,7 +22,7 @@
     margin-bottom: 4vh!important;
 }
 .Auth-LIB{
-  height: 16vh !important; 
+  /* height: 16vh !important;  */
   /* border: 1px solid red; */
   /* margin-bottom: 2vh; */
 }
@@ -23,8 +32,14 @@ font-size:small !important;
 
 }
 .Auth-Button{
- background-color:#FFA534 !important; 
- width: 110px;
+ /* background-color:#FFA534 !important;  */
+ background-color:#0866FF !important;
+ width: 80%;
+ margin-top:4vh !important;
+}
+.Auth-Button-Signup{
+  background-color: #31A24C !important;
+  width: 55%;
  margin-top:4vh !important;
 }
 .Auth-Input{
@@ -32,4 +47,10 @@ font-size:small !important;
 }
 .Auth-R-Input{
     margin-top: 10px !important;
+  }
+
+  @media (max-width: 800px) {
+    .Auth-Button-Signup{
+      width:70%;
+    }
   }
