--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -55,3 +55,8 @@ canvas {
       flex-direction: column;
   }
 }
+@media (min-width: 768px) and (max-width: 900px) {
+  .info-card-container {
+    margin-top: 90px;
+  }
+}
