--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,43 +1,53 @@
 
-.home-body {
-  /* background-color: #F7F7F8; */
-}
-.S-M-Item{
+/* .home-body {
+  
+} */
+/* background-color: #F7F7F8; */
+/* --------------------- */
+/* .S-M-Item{
   font-weight: bold !important;
   color: #475569;
 text-transform: uppercase !important;
-/* font-size: small !important; */
+
  font-size: 5px !important;
-}
-.containerhome{
+} */
+/* font-size: small !important; */
+/* ------------------------------- */
+/* .containerhome{
   background-size: cover;
   justify-content: center;
   align-items: center;
   align-content: center;
   background-position: center;
  
-  margin-top: 5% !important;
+  
   z-index: 1;
  flex-direction: column;
-} 
-.opacity-layer{
+}  */
+
+/* margin-top: 5% !important; */
+/* -------------------- */
+/* .opacity-layer{
     position: absolute;
     width:100%;
     height: 100%;
     opacity: 0.1 !important;
     z-index: 1;
-}
-.info-card-container {
+} */
+/* .info-card-container {
   display: flex;
   flex-wrap: wrap; 
-  justify-content: center; 
-  width:100% !important;
-  align-items: center;
-  align-content: center;
-  /* border:2px solid red; */
-  gap: 5%;
-}
-.container-infocard{
+  gap: 1%;
+  
+} */
+ /* justify-content: flex-start; 
+  align-items: flex-start;
+  align-content: flex-start;
+  */
+   /* border:2px solid red; */
+   /* width:100% !important; */
+/* -------------------- */
+/* .container-infocard{
    z-index: 2 !important;
    font-family: "Playwrite GB S", cursive;
    font-optical-sizing: auto;
@@ -45,12 +55,16 @@ text-transform: uppercase !important;
    font-style: normal;
    color:#655d5d !important;
    display: flex;
-   justify-content: center !important;
-   align-items: center !important;
-   text-align: center !important;
+  
    background-color: white;
-} 
-canvas {
+}  */
+ /* justify-content: center !important;
+   align-items: center !important;
+   text-align: center !important; */
+/* ----------------- */
+
+
+/* canvas {
   display: block;
   width: 100% !important;
   height: 400px !important;
@@ -62,6 +76,93 @@ canvas {
       flex-direction: column;
   }
 }
+@media (min-width: 768px) and (max-width: 900px) {
+  .info-card-container {
+    margin-top: 90px;
+  }
+} */
+
+
+/* ========================== */
+
+.home-body {
+  /* background-color: #F7F7F8; */
+}
+
+.S-M-Item{
+  font-weight: bold !important;
+  color: #475569;
+  text-transform: uppercase !important;
+  font-size: 5px !important;
+}
+
+.containerhome{
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  background-position: center;
+  z-index: 1;
+  flex-direction: column;
+} 
+
+.opacity-layer{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    opacity: 0.1 !important;
+    z-index: 1;
+}
+
+.info-card-container {
+  width: 100% !important;
+  margin-bottom: 2rem;
+}
+
+.container-infocard{
+   z-index: 2 !important;
+   font-family: "Playwrite GB S", cursive;
+   font-optical-sizing: auto;
+   font-weight:100;
+   font-style: normal;
+   color:#655d5d !important;
+   display: flex;
+   background-color: white;
+   height: 100%;
+   width: 100%;
+} 
+
+canvas {
+  display: block;
+  width: 100% !important;
+  height: 400px !important;
+}
+
+/* Responsive breakpoints for cards */
+@media (max-width: 599.9px) {
+  .info-card-container {
+      /* 1 card per row on mobile */
+  }
+}
+
+@media (min-width: 600px) and (max-width: 959.9px) {
+  .info-card-container {
+      /* 1 card per row on small tablets */
+  }
+}
+
+@media (min-width: 960px) and (max-width: 1279.9px) {
+  .info-card-container {
+      /* 4 cards per row on medium screens */
+  }
+}
+
+@media (min-width: 1280px) {
+  .info-card-container {
+      /* 5 cards per row on large screens */
+  }
+}
+
 @media (min-width: 768px) and (max-width: 900px) {
   .info-card-container {
     margin-top: 90px;
